# learn_python

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: application.yml  pylint.yml  testing.yml
src/: __init__.py  util.py
src/classes/: __init__.py  containers.py  student.py
tests/: test_containers.py  test_student.py  test_util.py
