[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-python"
version = "0.0.1"
authors = [
  { name="Will Schweitzer", email="willschweitzer@yahoo.com" },
]
description = "Learning about aspects of python and CD/CI pipelines"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/WillSchweitzer/learn_python"
Issues = "https://github.com/WillSchweitzer/learn_python/issues"